--- a/Elibrary/Web.config
+++ b/Elibrary/Web.config
@@ -5,6 +5,11 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<connectionStrings>
+		<!--location of database-->
+		<add name="con" connectionString="Data Source=DESKTOP-74NJPJL;Initial Catalog=elibraryDB;Inegrated Security=true"/>
+	</connectionStrings>
+	
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
