--- a/Elibrary/Web.config
+++ b/Elibrary/Web.config
@@ -7,7 +7,11 @@
 <configuration>
 	<connectionStrings>
 		<!--location of database-->
-		<add name="con" connectionString="Data Source=DESKTOP-74NJPJL;Initial Catalog=elibraryDB;Inegrated Security=true"/>
+		<!--
+		for company
+		<add name="con" connectionString="Data Source=DESKTOP-74NJPJL;Initial Catalog=elibraryDB;Integrated Security=true"/>
+		-->
+		<add name="con" connectionString="Data Source=MSI\SQLEXPRESS;Initial Catalog=elibraryDB;Integrated Security=true"/>
 	</connectionStrings>
 	
   <system.web>
