--- a/Elibrary/bin/Elibrary.dll.config
+++ b/Elibrary/bin/Elibrary.dll.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 
 <!--
   如需如何設定 ASP.NET 應用程式的詳細資訊，請前往
@@ -6,14 +6,10 @@
   -->
 <configuration>
 	<connectionStrings>
-		<!--location of database-->
-
-		<add name="con" connectionString="Data Source=DESKTOP-74NJPJL;Initial Catalog=elibraryDB;Integrated Security=true"/>
-		<!--
-		for company		
-		<add name="con" connectionString="Data Source=MSI\SQLEXPRESS;Initial Catalog=elibraryDB;Integrated Security=true"/>
-		-->
-	</connectionStrings>
+  <add name="con" connectionString="Data Source=DESKTOP-74NJPJL;Initial Catalog=elibraryDB;Integrated Security=true" />
+  <add name="elibraryDBConnectionString" connectionString="Data Source=DESKTOP-74NJPJL;Initial Catalog=elibraryDB;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
 	
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
