--- a/Elibrary/bin/Elibrary.dll.config
+++ b/Elibrary/bin/Elibrary.dll.config
@@ -3,11 +3,14 @@
 <!--
   如需如何設定 ASP.NET 應用程式的詳細資訊，請前往
   https://go.microsoft.com/fwlink/?LinkId=169433
+  company = DESKTOP-74NJPJL
+  msi = MSI\SQLEXPRESS
   -->
 <configuration>
 	<connectionStrings>
-  <add name="con" connectionString="Data Source=MSI\SQLEXPRESS;Initial Catalog=elibraryDB;Integrated Security=true" />
-  <add name="elibraryDBConnectionString" connectionString="Data Source=MSI\SQLEXPRESS;Initial Catalog=elibraryDB;Integrated Security=True"
+		
+  <add name="con" connectionString="Data Source=DESKTOP-74NJPJL;Initial Catalog=elibraryDB;Integrated Security=true" />
+  <add name="elibraryDBConnectionString" connectionString="Data Source=DESKTOP-74NJPJL;Initial Catalog=elibraryDB;Integrated Security=True"
    providerName="System.Data.SqlClient" />
  </connectionStrings>
 	
