--- a/Elibrary/Web.config
+++ b/Elibrary/Web.config
@@ -9,10 +9,15 @@
 <configuration>
 	<connectionStrings>
 		
-  <add name="con" connectionString="Data Source=DESKTOP-74NJPJL;Initial Catalog=elibraryDB;Integrated Security=true" />
-  <add name="elibraryDBConnectionString" connectionString="Data Source=DESKTOP-74NJPJL;Initial Catalog=elibraryDB;Integrated Security=True"
+  <add name="con" connectionString="Data Source=MSI\SQLEXPRESS;Initial Catalog=elibraryDB;Integrated Security=true" />
+  <add name="elibraryDBConnectionString" connectionString="Data Source=MSI\SQLEXPRESS;Initial Catalog=elibraryDB;Integrated Security=True"
    providerName="System.Data.SqlClient" />
  </connectionStrings>
+
+	<appSettings>
+		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+	</appSettings>
+	
 	
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
