--- a/Elibrary/bin/Elibrary.dll.config
+++ b/Elibrary/bin/Elibrary.dll.config
@@ -9,8 +9,8 @@
 <configuration>
 	<connectionStrings>
 		
-  <add name="con" connectionString="Data Source=MSI\SQLEXPRESS;Initial Catalog=elibraryDB;Integrated Security=true" />
-  <add name="elibraryDBConnectionString" connectionString="Data Source=MSI\SQLEXPRESS;Initial Catalog=elibraryDB;Integrated Security=True"
+  <add name="con" connectionString="Data Source=DESKTOP-74NJPJL;Initial Catalog=elibraryDB;Integrated Security=true" />
+  <add name="elibraryDBConnectionString" connectionString="Data Source=DESKTOP-74NJPJL;Initial Catalog=elibraryDB;Integrated Security=True"
    providerName="System.Data.SqlClient" />
  </connectionStrings>
 
