--- a/Elibrary/bin/Elibrary.dll.config
+++ b/Elibrary/bin/Elibrary.dll.config
@@ -22,6 +22,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
+	<customErrors mode="RemoteOnly" defaultRedirect="errorPage.aspx"/>
   </system.web>
   <system.webServer>
     <directoryBrowse enabled="true" />
